# emu-main-cmake

emu-app/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  emu-app
emu-app/src/common/: ffs.h  log_main.cpp
emu-app/src/config_firm/: config-gzzg.h
emu-app/src/include/: app_debug_main.h  program.h
emu-app/src/main_pro/: TaskMain.cpp  program.cpp
src_common/: CMakeCache.txt  CMakeLists.txt  Makefile  arm_linux_setup.cmake  cmake_install.cmake
src_common/common/: ffs.h  log.cpp  sys.c  sys.h
src_common/common/crc/: crc.h  crc16_check.c  crc_cal_by_bit.c  crc_cal_by_byte.c  crc_cal_by_halfbyte.c
